kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuhp-ingress
  namespace: cuhp-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.cuhp.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-api-svc
                port:
                  number: 80
